--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
             <img src="/Assets/logo.png" alt="">
             <nav>
                 <a href="#Home">Home</a>
-                <a href="#About" id="link-about">About Us</a>
-                <ul class="submenu">
-                    <li><a href="#">link 1</a></li>
-                    <li><a href="#">link 2</a></li>
-                    <li><a href="#">link 2</a></li>
-                </ul>
-
+                <div class="nav-item-with-submenu">
+                    <a href="#About" id="link-about">About Us</a>
+                    <ul class="submenu">
+                        <li><a href="#">Link 1</a></li>
+                        <li><a href="#">Link 2</a></li>
+                        <li><a href="#">Link 3</a></li>
+                    </ul>
+                </div>
                 <a href="#OurTeam">Our Team</a>
                 <a href="#Portfolio">Portfolio</a>
             </nav>
