Our services done

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                 <div class="nav-item-with-submenu">
                     <a href="#About" id="link-about">About Us</a>
                     <ul class="submenu">
-                        <li><a href="#">Link 1</a></li>
-                        <li><a href="#">Link 2</a></li>
-                        <li><a href="#">Link 3</a></li>
+                        <li><a href="#About-Us">Link 1</a></li>
+                        <li><a href="#Our-Services">Link 2</a></li>
+                        <li><a href="#Stats">Link 3</a></li>
                     </ul>
                 </div>
                 <a href="#OurTeam">Our Team</a>
@@ -38,7 +38,156 @@
         <br>
         <div class="arrow"></div>
     </section>
+    <section id="About-Us">
+        <div class="content-about">
+            <img src="/Assets/maountains-icon.png" alt="">
+            <p>
+                Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet nisl tempus convallis quis ac
+                lectus. Proin eget tortor risus. Mauris blandit aliquet elit. eget tincidunt nibh pulvinar a. Curabitur
+                non nulla sit amet nisl tempus.
+            </p>
+        </div>
+    </section>
+    <section id="Our-Services">
+        <div class="content-services">
+            <div class="top">
+                <img src="/Assets/axes-icon.png" alt="">
+                <h1>OUR SERVICES</h1>
+                <p>
+                    Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui.
+                    Quisque velit nisi. pretium
+                </p>
+                <p>ut lacinia in. elementum id enim. Donec sollicitudin molestie malesuada
+                </p>
+            </div>
+            <div class="cards-c-services">
 
+                <div class="card-offer">
+                    <img src="/Assets/fax-icon.png" alt="">
+                    <h1>GRAPHIC </h1>
+                    <h1>DESIGN</h1>
+                    <p>
+                        Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Quisque velit nisi.
+                        pretium ut lacinia in. elementum id enim. Donec sollicitudin
+                    </p>
+                </div>
+
+                <div class="card-offer">
+                    <img src="/Assets/roller-icon.png" alt="">
+                    <h1>WEB </h1>
+                    <h1>DESIGN</h1>
+                    <p>
+                        Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Quisque velit nisi.
+                        pretium ut lacinia in. elementum id enim. Donec sollicitudin
+                    </p>
+                </div>
+
+                <div class="card-offer">
+                    <img src="/Assets/monitor-icon.png" alt="">
+                    <h1>WEB </h1>
+                    <h1>DEVELOPMENT</h1>
+                    <p>
+                        Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Quisque velit nisi.
+                        pretium ut lacinia in. elementum id enim. Donec sollicitudin
+                    </p>
+                </div>
+
+                <div class="card-offer">
+                    <img src="/Assets/fax-icon.png" alt="">
+                    <h1>APP </h1>
+                    <h1>DEVELOPMENT</h1>
+                    <p>
+                        Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Quisque velit nisi.
+                        pretium ut lacinia in. elementum id enim. Donec sollicitudin
+                    </p>
+                </div>
+
+            </div>
+            <div class="cards-c-progressbars">
+                <div class="card-progresbars">
+                    <div class="progresbar">
+                        <h2>Ps</h2>
+                        <div class="progres">
+                            <div id="progres-fill-ps"></div>
+                        </div>
+                    </div>
+                    <div class="progresbar">
+                        <h2>Ai</h2>
+                        <div class="progres">
+                            <div id="progres-fill-ai"></div>
+                        </div>
+                    </div>
+                    <div class="progresbar">
+                        <h2>Id</h2>
+                        <div class="progres">
+                            <div id="progres-fill-id"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-progresbars">
+                    <div class="progresbar">
+                        <h2>Ui</h2>
+                        <div class="progres">
+                            <div id="progres-fill-ui"></div>
+                        </div>
+                    </div>
+                    <div class="progresbar">
+                        <h2>Ux</h2>
+                        <div class="progres">
+                            <div id="progres-fill-ux"></div>
+                        </div>
+                    </div>
+                    <div class="progresbar">
+                        <h2>Responsive</h2>
+                        <div class="progres">
+                            <div id="progres-fill-responsive"></div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card-progresbars">
+                    <div class="progresbar">
+                        <h2>Html</h2>
+                        <div class="progres">
+                            <div id="progres-fill-html"></div>
+                        </div>
+                    </div>
+                    <div class="progresbar">
+                        <h2>Css</h2>
+                        <div class="progres">
+                            <div id="progres-fill-css"></div>
+                        </div>
+                    </div>
+                    <div class="progresbar">
+                        <h2>Js</h2>
+                        <div class="progres">
+                            <div id="progres-fill-js"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-progresbars">
+                    <div class="progresbar">
+                        <h2>C++</h2>
+                        <div class="progres">
+                            <div id="progres-fill-cpp"></div>
+                        </div>
+                    </div>
+                    <div class="progresbar">
+                        <h2>Java</h2>
+                        <div class="progres">
+                            <div id="progres-fill-java"></div>
+                        </div>
+                    </div>
+                    <div class="progresbar">
+                        <h2>Swift</h2>
+                        <div class="progres">
+                            <div id="progres-fill-swift"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="/js/script.js"></script>
 </body>
 
