--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <nav>
                 <a href="#Home">Home</a>
                 <div class="nav-item-with-submenu">
-                    <a href="#About" id="link-about">About Us</a>
+                    <a href="#About-Us" id="link-about">About Us</a>
                     <ul class="submenu">
                         <li><a href="#About-Us">Link 1</a></li>
                         <li><a href="#Our-Services">Link 2</a></li>
@@ -185,6 +185,70 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+    <section id="Stats">
+        <div class="stats-container">
+            <div class="stat">
+                <h1>694</h1>
+                <h2>COMPLETED DESIGNS</h2>
+            </div>
+            <div class="stat">
+                <h1>324</h1>
+                <h2>PAGES CREATED</h2>
+            </div>
+            <div class="stat">
+                <h1>134</h1>
+                <h2>PAGES CODED</h2>
+            </div>
+            <div class="stat">
+                <h1>27</h1>
+                <h2>APPS FINISHED</h2>
+            </div>
+        </div>
+    </section>
+    <section id="Portfolio">
+        <div class="portfolio-content">
+            <div class="top">
+                <img src="/Assets/axes-icon.png" alt="">
+                <h1>OUR PORTFOLIO</h1>
+                <p>
+                    Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui.
+                    Quisque velit nisi. pretium
+                </p>
+                <p>ut lacinia in. elementum id enim. Donec sollicitudin molestie malesuada
+                </p>
+            </div>
+            <div class="info-container">
+                <div class="info">
+                    <h1>GRAPHIC </h1>
+                    <h1> WEB</h1>
+                </div>
+                <img src="/Assets/logo-dark.jpg" alt="">
+                <div class="info">
+                    <h1>DEVELOPMENT </h1>
+                    <h1> APP</h1>
+                </div>
+            </div>
+            <div class="gallery">
+                <img src="/Assets/newspaper.jpg" alt="">
+                <img src="/Assets/stationary.jpg" alt="">
+                <div class="doe">
+                    <div class="yellow">
+                         
+                        <div class="normal">
+                        <h1>DOE BRANDING</h1>
+                        <p>Vestibulum ac diam sit amet quam</p>
+                        <p>vehicula elementum sed sit amet dui.</p>
+                        <p>Quisque velit nisi. pretium ut lacinia in.</p>
+                        <p>elementum id enim...</p>
+                    </div>
+                </div>
+                </div>
+                <img src="/Assets/office.jpg" alt="">
+                <img src="/Assets/charts.jpg" alt="">
+                <img src="/Assets/chicago.jpg" alt="">
             </div>
         </div>
     </section>
