--- a/index.html
+++ b/index.html
@@ -236,20 +236,21 @@
                 <img src="/Assets/stationary.jpg" alt="">
                 <div class="doe">
                     <div class="yellow">
-                         
+
                         <div class="normal">
-                        <h1>DOE BRANDING</h1>
-                        <p>Vestibulum ac diam sit amet quam</p>
-                        <p>vehicula elementum sed sit amet dui.</p>
-                        <p>Quisque velit nisi. pretium ut lacinia in.</p>
-                        <p>elementum id enim...</p>
+                            <h1>DOE BRANDING</h1>
+                            <p>Vestibulum ac diam sit amet quam</p>
+                            <p>vehicula elementum sed sit amet dui.</p>
+                            <p>Quisque velit nisi. pretium ut lacinia in.</p>
+                            <p>elementum id enim...</p>
+                        </div>
                     </div>
-                </div>
                 </div>
                 <img src="/Assets/office.jpg" alt="">
                 <img src="/Assets/charts.jpg" alt="">
                 <img src="/Assets/chicago.jpg" alt="">
             </div>
+            <a href="">LIKE WHAT YOU SEE?</a>
         </div>
     </section>
     <script src="/js/script.js"></script>
