--- a/index.html
+++ b/index.html
@@ -251,6 +251,113 @@
                 <img src="/Assets/chicago.jpg" alt="">
             </div>
             <a href="">LIKE WHAT YOU SEE?</a>
+            <div class="bottom">
+                <a href="">VIEW OUR VIDEO</a>
+            </div>
+        </div>
+    </section>
+    <section id="Our-Team">
+        <div class="team-content">
+            <div class="top">
+                <img src="/Assets/axes-icon.png" alt="">
+                <h1>OUR TEAM</h1>
+                <p>
+                    Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui.
+                    Quisque velit nisi. pretium
+                </p>
+                <p>ut lacinia in. elementum id enim. Donec sollicitudin molestie malesuada
+                </p>
+            </div>
+            <div class="cards-team">
+                <div class="card-member">
+                    <div class="img">
+                        <img src="/Assets/bearded-man.jpg" alt="">
+                        <h1>JONH DOE</h1>
+                    </div>
+                    <div class="txt">
+                        <p>Vestibulum ac diam sit amet quam </p>
+                        <p>vehicula elementum sed sit amet</p>
+                        <p>dui. Quisque velit nisi.pretium ut</p>
+                        <p>lacinia in. elementum id enim.</p>
+                        <p>Donec sollicitudin</p>
+                    </div>
+                </div>
+                <div class="card-member">
+                    <div class="img">
+                        <img src="/Assets/woman-freckles.jpg" alt="">
+                        <h1>JONH DOE</h1>
+                    </div>
+                    <div class="txt">
+                        <p>Vestibulum ac diam sit amet quam </p>
+                        <p>vehicula elementum sed sit amet</p>
+                        <p>dui. Quisque velit nisi.pretium ut</p>
+                        <p>lacinia in. elementum id enim.</p>
+                        <p>Donec sollicitudin</p>
+                    </div>
+                </div>
+                <div class="card-member">
+                    <div class="img">
+                        <img src="/Assets/woman-smiling.jpg" alt="">
+                        <h1>JONH DOE</h1>
+                    </div>
+                    <div class="txt">
+                        <p>Vestibulum ac diam sit amet quam </p>
+                        <p>vehicula elementum sed sit amet</p>
+                        <p>dui. Quisque velit nisi.pretium ut</p>
+                        <p>lacinia in. elementum id enim.</p>
+                        <p>Donec sollicitudin</p>
+                    </div>
+                </div>
+                <div class="card-member">
+                    <div class="img">
+                        <img src="/Assets/man-smiling.jpg" alt="">
+                        <h1>JONH DOE</h1>
+                    </div>
+                    <div class="txt">
+                        <p>Vestibulum ac diam sit amet quam </p>
+                        <p>vehicula elementum sed sit amet</p>
+                        <p>dui. Quisque velit nisi.pretium ut</p>
+                        <p>lacinia in. elementum id enim.</p>
+                        <p>Donec sollicitudin</p>
+                    </div>
+                </div>
+            </div>
+            <div class="quotes-container">
+                <div class="quote">
+                    <div class="text">
+                        <p>Pellentesque in ipsum id orci porta dapibus. Lorem ipsum dolor sit<br>
+                            amet, consectetur adipiscing elit. Proin eget tortor risus. Lorem<br>
+                            ipsum dolor sit amet, consectetur adipiscing elit. Curabitur non nulla<br>
+                            sit amet nisl tempus convallis quis ac lectus. Vivamus magna justo.<br>
+                            lacinia eget consectetur sed, convallis at tellus. Curabitur non nulla<br>
+                            sit amet nisl tempus convallis quis ac lectus. Nulla quis lorem ut<br>
+                            libero malesuada feugiat. <br>
+                            Pellentesque in ipsum id orci porta dapibus. Lorem ipsum dolor sit<br>
+                            amet, consectetur adipiscing elit. Proin eget tortor risus. Lorem<br>
+                            ipsum dolor sit amet, consectetur adipiscing elit. Curabitur non nulla<br>
+                            sit amet nisl tempus convallis quis ac lectus. Vivamus magna justo.<br>
+                            lacinia eget consectetur sed, convallis at tellus. Curabitur non nulla<br>
+                            sit amet nisl tempus convallis quis ac lectus. Nulla quis lorem ut<br>
+                            libero malesuada feugiat.</p>
+                    </div>
+                    <div class="q">
+                        <p>
+                            "Proin eget tortor risus. Lorem ipsum dolor sit amet, consectetur<br>
+                            adipiscing elit. Curabitur tempus convallis justo. lacinia eget male-<br>
+                            suada feugiat"</p>
+                        <h2>Jhon Doe SEO</h2>
+                    </div>
+                </div>
+                <div class="quote">
+                    <div class="q">
+                        <p>"Proin eget tortor risus. Lorem ipsum dolor sit amet, consectetur<br>
+                            adipiscing elit. Curabitur tempus convallis justo. lacinia eget male-<br>
+                            suada feugiat"</p>
+                        <h2>Jhon Doe SEO</h2>
+                    </div>
+                    <img src="/Assets/workspace.jpg" alt="">
+                </div>
+            </div>
         </div>
     </section>
     <script src="/js/script.js"></script>
