--- a/index.html
+++ b/index.html
@@ -360,6 +360,50 @@
             </div>
         </div>
     </section>
+    <footer>
+        <div class="container-f">
+            <div class="left-f">
+                <img src="/Assets/logo.png" alt="">
+                <p>
+                    Pellentesque in ipsum id orci porta dapibus. Vivamus magna <br>
+                    justo, lacinia eget consectetur sed, convallis at tellus. <br>
+                    Pellentesque in ipsum id orci porta dapibus.<br>
+                </p>
+                <p>Created by <span class="graphberry">Graphberry.</span>Belgrade.Serbia</p>
+                <p>&copy; 2017 - Sparkle.inc</p>
+            </div>
+            <div class="middle">
+                <h1>Links</h1>
+                <a href="#Home">Home</a>
+                <a href="#Our-Services">Our Services</a>
+                <a href="#Portfolio">Portfolio</a>
+                <a href="#Our-Team">Testimonials</a>
+                <a href="">Support</a>
+                <a href="">Tearms and Conditions</a>
+            </div>
+            <div class="middle">
+                <h1>About Us</h1>
+                <a href="">Sign In</a>
+                <a href="">Register</a>
+                <a href="#About-Us">About Us</a>
+                <a href="">Blog</a>
+                <a href="">Contact Us</a>
+            </div>
+            <div class="right-f">
+                <h1>Contact Us</h1>
+                <p>Get in touch with us via email. phone.We are waiting for<br>
+                    your call or message
+                </p>
+                <a href="mailto:graphberry@gmail.com">graphberry@gmail.com</a>
+                <div class="socials">
+                    <img src="/Assets/facebook-i.png" alt="">
+                    <img src="/Assets/twitter-icon-circle-logo.png" alt="">
+                    <img src="/Assets/gpi.png" alt="">
+                    <img src="/Assets/dribble-icon.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="/js/script.js"></script>
 </body>
 
