--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <li><a href="#Stats">Link 3</a></li>
                     </ul>
                 </div>
-                <a href="#OurTeam">Our Team</a>
+                <a href="#Our-Team">Our Team</a>
                 <a href="#Portfolio">Portfolio</a>
             </nav>
         </div>
